# ConwayLifeGame

./: .gitignore  README.md
src/: CMakeLists.txt  Cell.h  Makefile  Makefile_simple  World_field.cpp  World_field.h  build.sh  main.cpp
src/World/: CMakeLists.txt  Cell.h  World_field.h
